# Query-Time-Decision-Modeling

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  HOW_TO_USE.md  WHAT_THIS_REPO_PROVES.md
examples/: demo_request.json  demo_response.json  mini_eval.py
examples/fixtures/: exoplanet_cases.json
qtdm_arbiter/: QTDM_BUILD_DOCTRINE.md  TECHNICAL_SPEC.md  __init__.py  arbiter_decide.py  run_qtdm_eval_suite.sh  start.sh
qtdm_arbiter/api/: __init__.py  routes.py
qtdm_arbiter/audit/: __init__.py  log.py
qtdm_arbiter/config/: support_weights.json
qtdm_arbiter/core/: __init__.py  confidence.py  conformal.py  dcs.py  distribution.py  estimator.py  features.py  neighborhood.py  reasoning.py  refusal.py
qtdm_arbiter/domains/: __init__.py
qtdm_arbiter/domains/exoplanet/: __init__.py  adapter.py
qtdm_arbiter/examples/: __init__.py  fixture_retrieval.py  run_demo.py
qtdm_arbiter/integration/: __init__.py  retrieval_client.py
qtdm_arbiter/models/: __init__.py  request.py  response.py
qtdm_arbiter/tests/: __init__.py  test_arbiter_decide.py  test_calibrate_support.py  test_confidence.py  test_conformal.py  test_distribution.py  test_estimator.py  test_eval_qtdm.py  test_features.py  test_neighborhood.py
qtdm_arbiter/tools/: calibrate_support.py  eval_qtdm.py  eval_qtdm_comparative.py  eval_ranking.py  eval_three_condition.py  render_eval_report.py
